To illustrate alignment problem on MtxSelect

--- a/projects/dev-app/src/app/select/select-demo.component.scss
+++ b/projects/dev-app/src/app/select/select-demo.component.scss
@@ -1,3 +1,5 @@
-mat-form-field {
-  vertical-align: middle;
-}
+// Without this, the baseline of MtxSelect and Mat-Select do not align
+// this causes problem in aligning  mat-form-field
+// mat-form-field {
+//   vertical-align: middle;
+// }
