--- a/projects/dev-app/src/app/select/select-demo.component.html
+++ b/projects/dev-app/src/app/select/select-demo.component.html
@@ -12,23 +12,74 @@
 </div>
 
 <mat-form-field [color]="themeColor">
-  <mat-label>Select Food</mat-label>
+  <mat-label>NoPlaceHolder</mat-label>
 
-  <mtx-select [(ngModel)]="value" [items]="items" bindLabel="name" bindValue="id"
-    [disabled]="disabled" [readonly]="readonly" [multiple]="multipleSelect"
-    placeholder="select food" required>
+  <!-- placeholder="select food" -->
+  <mtx-select
+    [(ngModel)]="value"
+    [items]="items"
+    bindLabel="name"
+    bindValue="id"
+    [disabled]="disabled"
+    [readonly]="readonly"
+    [multiple]="multipleSelect"
+    required
+  >
   </mtx-select>
 
-  <mat-hint>Choose your favorite food</mat-hint>
+  <mat-hint>MtxSelect without placeholder</mat-hint>
   <mat-error>Please choose a food</mat-error>
+</mat-form-field>
+
+<mat-form-field [color]="themeColor">
+  <mat-label>PlaceHolder</mat-label>
+
+  <!-- placeholder="select food" -->
+  <mtx-select
+    [(ngModel)]="value"
+    [items]="items"
+    bindLabel="name"
+    bindValue="id"
+    [disabled]="disabled"
+    [readonly]="readonly"
+    [multiple]="multipleSelect"
+    placeholder="food"
+    required
+  >
+  </mtx-select>
+
+  <mat-hint>MtxSelect WITH placeholder</mat-hint>
+  <mat-error>Please choose a food</mat-error>
+</mat-form-field>
+
+<mat-form-field [color]="themeColor">
+  <mat-label>Mat select</mat-label>
+
+  <!-- <mat-select [(ngModel)]="value" placeholder="select food" required> -->
+  <mat-select [(ngModel)]="value" required>
+    @for (item of items; track item) {
+      <mat-option [value]="item.id">{{ item.name }}</mat-option>
+    }
+  </mat-select>
+
+  <mat-hint>Standard Mat-Select</mat-hint>
+  <mat-error>Mat select</mat-error>
 </mat-form-field>
 
 <mat-form-field [color]="themeColor" appearance="fill">
   <mat-label>Select Food</mat-label>
 
-  <mtx-select [(ngModel)]="value" [items]="items" bindLabel="name" bindValue="id"
-    [disabled]="disabled" [readonly]="readonly" [multiple]="multipleSelect"
-    placeholder="select food" required>
+  <mtx-select
+    [(ngModel)]="value"
+    [items]="items"
+    bindLabel="name"
+    bindValue="id"
+    [disabled]="disabled"
+    [readonly]="readonly"
+    [multiple]="multipleSelect"
+    placeholder="select food"
+    required
+  >
   </mtx-select>
 
   <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
@@ -39,9 +90,17 @@
 <mat-form-field [color]="themeColor" appearance="outline">
   <mat-label>Select Food</mat-label>
 
-  <mtx-select [(ngModel)]="value" [items]="items" bindLabel="name" bindValue="id"
-    [disabled]="disabled" [readonly]="readonly" [multiple]="multipleSelect"
-    placeholder="select food" required>
+  <mtx-select
+    [(ngModel)]="value"
+    [items]="items"
+    bindLabel="name"
+    bindValue="id"
+    [disabled]="disabled"
+    [readonly]="readonly"
+    [multiple]="multipleSelect"
+    placeholder="select food"
+    required
+  >
   </mtx-select>
 
   <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
@@ -54,16 +113,14 @@
 <mat-form-field>
   <mat-label>Select Food</mat-label>
 
-  <mtx-select [items]="items" [formControl]="control"
-    bindLabel="name" bindValue="id">
-  </mtx-select>
+  <mtx-select [items]="items" [formControl]="control" bindLabel="name" bindValue="id"> </mtx-select>
 
   <mat-hint>Choose your favorite food</mat-hint>
   <mat-error>Please choose a food</mat-error>
 </mat-form-field>
 
 <mat-slide-toggle (change)="changeState($event)" [checked]="control.disabled">
-  {{control.disabled?'disable':'enable'}}
+  {{ control.disabled ? 'disable' : 'enable' }}
 </mat-slide-toggle>
 
 <h2>Material Select</h2>
@@ -72,7 +129,7 @@
   <mat-label>Choose an option</mat-label>
   <mat-select>
     @for (food of items; track food) {
-      <mat-option [value]="food.id">{{food.name}}</mat-option>
+      <mat-option [value]="food.id">{{ food.name }}</mat-option>
     }
   </mat-select>
 </mat-form-field>
@@ -81,7 +138,7 @@
   <mat-label>Choose an option</mat-label>
   <mat-select>
     @for (food of items; track food) {
-      <mat-option [value]="food.id">{{food.name}}</mat-option>
+      <mat-option [value]="food.id">{{ food.name }}</mat-option>
     }
   </mat-select>
 </mat-form-field>
@@ -89,12 +146,24 @@
 <h2>Test Templates</h2>
 
 <mat-form-field>
-
-  <mtx-select [(ngModel)]="value" [items]="items" bindLabel="name" bindValue="id"
-    [disabled]="disabled" [readonly]="readonly" [multiple]="multipleSelect"
-    [closeOnSelect]="closeOnSelect" placeholder="select food" required>
+  <mtx-select
+    [(ngModel)]="value"
+    [items]="items"
+    bindLabel="name"
+    bindValue="id"
+    [disabled]="disabled"
+    [readonly]="readonly"
+    [multiple]="multipleSelect"
+    [closeOnSelect]="closeOnSelect"
+    placeholder="select food"
+    required
+  >
     <ng-template ng-placeholder-tmp>
-      <img height="15" width="15" src="//www.gravatar.com/avatar/b0d8c6e5ea589e6fc3d3e08afb1873bb?d=retro&r=g&s=30 2x" />
+      <img
+        height="15"
+        width="15"
+        src="//www.gravatar.com/avatar/b0d8c6e5ea589e6fc3d3e08afb1873bb?d=retro&r=g&s=30 2x"
+      />
       Select your food
     </ng-template>
     <!-- <ng-template ng-option-tmp let-item="item" let-item$="item$" let-index="index"
@@ -108,10 +177,17 @@
 </mat-form-field>
 
 <mat-form-field>
-
-  <mtx-select [(ngModel)]="selectedAccount" [items]="accounts" bindLabel="name" bindValue="name"
-    groupBy="country" [disabled]="disabled" [readonly]="readonly" [multiple]="multipleSelect"
-    [closeOnSelect]="closeOnSelect">
+  <mtx-select
+    [(ngModel)]="selectedAccount"
+    [items]="accounts"
+    bindLabel="name"
+    bindValue="name"
+    groupBy="country"
+    [disabled]="disabled"
+    [readonly]="readonly"
+    [multiple]="multipleSelect"
+    [closeOnSelect]="closeOnSelect"
+  >
     <!-- <ng-template ng-optgroup-tmp let-item="item" let-item$="item$" let-index="index"
       let-searchTerm="searchTerm">
       {{searchTerm}}
@@ -127,7 +203,10 @@
 <mat-form-field>
   <mat-label>Select Food</mat-label>
 
-  <mtx-select [items]="items" bindLabel="name" bindValue="id"
+  <mtx-select
+    [items]="items"
+    bindLabel="name"
+    bindValue="id"
     [(ngModel)]="value"
     [multiple]="multipleSelect"
     (open)="log($event, 'open')"
@@ -138,6 +217,7 @@
     (change)="log($event, 'change')"
     (add)="log($event, 'add')"
     (remove)="log($event, 'remove')"
-    (search)="log($event, 'search')">
+    (search)="log($event, 'search')"
+  >
   </mtx-select>
 </mat-form-field>
